--- a/about.html
+++ b/about.html
@@ -20,11 +20,11 @@ header-img: "img/about.jpg"
 
     <p><strong>皆さん 初めまして</strong></p>
 		
-		<p>大家好，我是<strong>Otone</strong>，一条咸鱼前端，现在广州实习。</p>
+		<p>大家好，我是<strong>Otone</strong>，一条咸鱼oier，现在中山学习。</p>
 
-    <span class="truth">我只想做一条不工作有钱拿的咸鱼，<s>做梦呢</s></span>
+    <span class="truth">我只想做一条年级第一的咸鱼，<s>做梦呢23333</s></span>
 		
-		<p>希望往全栈攻城狮的方向走，然而目前只会HTML+css+JavaScript<span class="truth">大学过的真的废</span>，现在正在学jq和vue</p>
+		<p>希望往自主招生的方向走，然而目前只会c++，linux，<span class="truth">大真的废</span>，现在正在学算法</p>
 		
 <div class="panel-group" id="accordion" role="tablist" aria-multiselectable="true">
   <div class="panel panel-default">
@@ -52,10 +52,7 @@ header-img: "img/about.jpg"
     
 		<h5>History</h5>
 		<ul>
-			<li>2018.8.27 博客建立</li>
-			<li>2018.8.30 gitalk评论插件成功接入</li>
-			<li>2018.9.3 背景canvas添加</li>
-			<li>2018.10.23 APlayer播放器添加</li>
+			<li>2019.02.01 博客建立</li>
 		</ul>
 		
     <h5>Talks</h5>
