--- a/about.html
+++ b/about.html
@@ -20,7 +20,7 @@ header-img: "img/about.jpg"
 
     <p><strong>皆さん 初めまして</strong></p>
 		
-		<p>大家好，我是<strong>Otone</strong>，一条咸鱼oier，现在中山学习。</p>
+		<p>大家好，我是<strong>sushitong</strong>，一条咸鱼oier，现在中山学习。</p>
 
     <span class="truth">我只想做一条年级第一的咸鱼，<s>做梦呢23333</s></span>
 		
